# wingpanel-indicator-sound

./: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  meson.build
.github/workflows/: gettext.yml  githubci.yml  main.yml  release.yml
data/: Indicator.css  PlayerRow.css  gresource.xml  indicator.css  io.elementary.desktop.wingpanel.sound.gschema.xml  mask.gresource.xml  meson.build  sound.appdata.xml.in  sound.metainfo.xml.in
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+165 more)
schemas/: CMakeLists.txt  org.pantheon.desktop.wingpanel.indicators.sound.gschema.xml
src/: CMakeLists.txt  DBus.vala  Device.vala  Indicator.vala
src/Services/: Adapter.vala  DBus.vala  Device.vala  Manager.vala  MediaPlayer.vala  MprisClient.vala  PulseAudioManager.vala  Settings.vala  ShellKeyGrabber.vala  Volume-control.vala
src/Widgets/: DeviceItem.vala  DeviceManagerWidget.vala  DisplayWidget.vala  FixedWidthLabel.vala  IndicatorScale.vala  MaxWidthLabel.vala  MprisGui.vala  MprisWidget.vala  OutputDeviceItem.vala  OutputDeviceManagerWidget.vala  PanelIcon.vala  PlayerList.vala  PlayerRow.vala  Scale.vala  Toggler.vala
vapi/: libpulse-ext.vapi  libpulse.vapi
